--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  .max-container{
+    max-width: 1280px;
+    margin: 2.75rem auto;
+  }
+}
+
+@layer utilities{
+  .button{
+    @apply border text-xl px-3 py-1 hover:bg-slate-200 hover:text-slate-900 transition-all hover:border-slate-900;
+  }
+}
